manifest/media/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jackett
  namespace: media
  annotations:
    kubernetes.io/ingress.class: "nginx"
#    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "*.defconsandbox.com"
    secretName: wildcard-prod
  rules:
  - host: jackett.defconsandbox.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:  
            name: jackett-service
            port:
              number: 80
